--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="css.sass">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <h1>ZeroDayCode - Day1</h1>
