--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<h1>ZeroDayCode - Day1</h1>
+<h1>ZeroDayCode</h1>
 <ul>
   <li>
     <input type="checkbox" checked>
     <i></i>
     <h2>Language Introduction</h2>
-    <p>This page was written in HTML and CSS. The CSS was compiled from SASS. I used Normalize as my CSS reset and -prefix-free to save myself some headaches. I haven't quite gotten the hang of Slim for compiling into HTML, but someday I'll use it since its syntax compliments that of SASS. Regardless, this could all be done in plain HTML and CSS.</p>
+    <p>This is an Introduction to our ZeroDayCode Project</p>
   </li>
   <li>
     <input type="checkbox" checked>
