--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <head>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
-<h1>ZeroDayCode</h1>
-<ul>
-  <li>
-    <input type="checkbox" checked>
-    <i></i>
-    <h2>Language Introduction</h2>
-    <p>This is an Introduction to our ZeroDayCode Project</p>
-  </li>
-  <li>
-    <input type="checkbox" checked>
-    <i></i>
-    <h2>How it Works</h2>
-    <p>Using the sibling and checked selectors, we can determine the styling of sibling elements based on the checked state of the checkbox input element. One use, as demonstrated here, is an entirely CSS and HTML accordion element. Media queries are used to make the element responsive to different screen sizes.</p>
-  </li>
-  <li>
-    <input type="checkbox" checked>
-    <i></i>
-    <h2>Points of Interest</h2>
-    <p>By making the open state default for when :checked isn't detected, we can make this system accessable for browsers that don't recognize :checked. The fallback is simply an open accordion. The accordion can be manipulated with Javascript (if needed) by changing the "checked" property of the input element.</p>
-  </li>
-</ul>
+<body>
+  <div id="logoDiv">
+    <img src="https://nullforums.net/data/assets/logo/nullforums-logo-2022.png" style="text-align:center;max-width:200px;">
+  </div>
+  <h1>ZeroDayCode</h1>
+  <ul>
+    <li>
+      <input type="checkbox" checked>
+      <i></i>
+      <h2>Language Introduction</h2>
+      <p>This is an Introduction to our ZeroDayCode Project</p>
+    </li>
+    <li>
+      <input type="checkbox" checked>
+      <i></i>
+      <h2>How it Works</h2>
+      <p>Using the sibling and checked selectors, we can determine the styling of sibling elements based on the checked state of the checkbox input element. One use, as demonstrated here, is an entirely CSS and HTML accordion element. Media queries are used to make the element responsive to different screen sizes.</p>
+    </li>
+    <li>
+      <input type="checkbox" checked>
+      <i></i>
+      <h2>Points of Interest</h2>
+      <p>By making the open state default for when :checked isn't detected, we can make this system accessable for browsers that don't recognize :checked. The fallback is simply an open accordion. The accordion can be manipulated with Javascript (if needed) by changing the "checked" property of the input element.</p>
+    </li>
+  </ul>
+</body>
