--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <div id="logoDiv">
-    <img src="https://nullforums.net/data/assets/logo/nullforums-logo-2022.png" style="text-align:center;max-width:200px;">
+    <img src="https://i.ibb.co/k3mxvTS/nf-logo.webp" style="text-align:center;max-width:200px;">
   </div>
   <h1>ZeroDayCode</h1>
   <ul>
